[gd_scene format=4 uid="uid://bkyoruw1ew5d"]

[ext_resource type="Texture2D" uid="uid://csspsdn3jol7y" path="res://assets/sprites/tile.png" id="1_e8gxf"]
[ext_resource type="PackedScene" uid="uid://cxb00h4wi8wtc" path="res://scenes/characters/CharacterParent.tscn" id="2_3sta2"]
[ext_resource type="Script" uid="uid://cxxdfjmfqnx3u" path="res://scripts/core/CombatManager.gd" id="2_aybq8"]
[ext_resource type="PackedScene" uid="uid://dv3rlwcaxx5bc" path="res://scenes/ui/CombatOverlay.tscn" id="3_31ujj"]
[ext_resource type="PackedScene" uid="uid://b71wrsa4yxmn0" path="res://scenes/core/CameraSystem.tscn" id="5_upn1x"]
[ext_resource type="PackedScene" uid="uid://dwpi86kevrhos" path="res://scenes/characters/ClassicCharacter.tscn" id="6_e8gxf"]
[ext_resource type="Texture2D" uid="uid://uux6o6ai4e6o" path="res://assetsProv/sprites/360_F_704861433_mQKvkfcIJ8xVClZvQZIvuKuatKjTDdiW.jpg" id="7_hd1y5"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_hd1y5"]
texture = ExtResource("1_e8gxf")
texture_region_size = Vector2i(38, 38)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-19, -19, 19, -19, 19, 19, -19, 19)

[sub_resource type="TileSet" id="TileSet_5e2nw"]
tile_size = Vector2i(38, 38)
physics_layer_0/collision_layer = 2147483649
sources/0 = SubResource("TileSetAtlasSource_hd1y5")

[node name="TestingMap" type="TileMapLayer" unique_id=740957638]
tile_map_data = PackedByteArray("AADv/wAAAAAAAAAAAADw/wAAAAAAAAAAAADx/wAAAAAAAAAAAADy/wAAAAAAAAAAAADz/wAAAAAAAAAAAADz/wEAAAAAAAAAAAD0/wEAAAAAAAAAAAD1/wEAAAAAAAAAAAD2/wEAAAAAAAAAAAD3/wEAAAAAAAAAAAD3/wIAAAAAAAAAAAD4/wIAAAAAAAAAAAD5/wIAAAAAAAAAAAD5/wEAAAAAAAAAAAD6/wEAAAAAAAAAAAD7/wEAAAAAAAAAAAD8/wEAAAAAAAAAAAD8/wAAAAAAAAAAAAD9/wAAAAAAAAAAAAD+/wAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEAAAAAAAAAAAD//wEAAAAAAAAAAAD+/wEAAAAAAAAAAAD9/wEAAAAAAAAAAAD4/wEAAAAAAAAAAAD1/wIAAAAAAAAAAAD0/wIAAAAAAAAAAADz/wIAAAAAAAAAAADy/wIAAAAAAAAAAADx/wIAAAAAAAAAAADw/wIAAAAAAAAAAADw/wEAAAAAAAAAAADv/wEAAAAAAAAAAADx/wEAAAAAAAAAAADy/wEAAAAAAAAAAADv/wIAAAAAAAAAAAD2/wIAAAAAAAAAAAD6/wIAAAAAAAAAAAD7/wIAAAAAAAAAAAD8/wIAAAAAAAAAAAD9/wIAAAAAAAAAAAD+/wIAAAAAAAAAAAD//wIAAAAAAAAAAAAAAAIAAAAAAAAAAAABAAIAAAAAAAAAAADn/wAAAAAAAAAAAADn/wEAAAAAAAAAAADn/wIAAAAAAAAAAADn/wMAAAAAAAAAAADn/wQAAAAAAAAAAADn/wUAAAAAAAAAAADn/wYAAAAAAAAAAADo/wAAAAAAAAAAAADo/wEAAAAAAAAAAADo/wIAAAAAAAAAAADo/wMAAAAAAAAAAADo/wQAAAAAAAAAAADo/wUAAAAAAAAAAADo/wYAAAAAAAAAAADp/wAAAAAAAAAAAADp/wEAAAAAAAAAAADp/wIAAAAAAAAAAADp/wMAAAAAAAAAAADp/wQAAAAAAAAAAADp/wUAAAAAAAAAAADp/wYAAAAAAAAAAADq/wAAAAAAAAAAAADq/wEAAAAAAAAAAADq/wIAAAAAAAAAAADq/wMAAAAAAAAAAADq/wQAAAAAAAAAAADq/wUAAAAAAAAAAADq/wYAAAAAAAAAAADr/wAAAAAAAAAAAADr/wEAAAAAAAAAAADr/wIAAAAAAAAAAADr/wMAAAAAAAAAAADr/wQAAAAAAAAAAADr/wUAAAAAAAAAAADr/wYAAAAAAAAAAADs/wAAAAAAAAAAAADs/wEAAAAAAAAAAADs/wIAAAAAAAAAAADs/wMAAAAAAAAAAADs/wQAAAAAAAAAAADs/wUAAAAAAAAAAADs/wYAAAAAAAAAAADt/wAAAAAAAAAAAADt/wEAAAAAAAAAAADt/wIAAAAAAAAAAADt/wMAAAAAAAAAAADt/wQAAAAAAAAAAADt/wUAAAAAAAAAAADt/wYAAAAAAAAAAADu/wAAAAAAAAAAAADu/wEAAAAAAAAAAADu/wIAAAAAAAAAAADu/wMAAAAAAAAAAADu/wQAAAAAAAAAAADu/wUAAAAAAAAAAADu/wYAAAAAAAAAAADv/wMAAAAAAAAAAADv/wQAAAAAAAAAAADv/wUAAAAAAAAAAADv/wYAAAAAAAAAAADw/wMAAAAAAAAAAADw/wQAAAAAAAAAAADw/wUAAAAAAAAAAADw/wYAAAAAAAAAAADx/wMAAAAAAAAAAADx/wQAAAAAAAAAAADx/wUAAAAAAAAAAADx/wYAAAAAAAAAAADy/wMAAAAAAAAAAADy/wQAAAAAAAAAAADy/wUAAAAAAAAAAADy/wYAAAAAAAAAAADz/wMAAAAAAAAAAADz/wQAAAAAAAAAAADz/wUAAAAAAAAAAADz/wYAAAAAAAAAAAD0/wAAAAAAAAAAAAD0/wMAAAAAAAAAAAD0/wQAAAAAAAAAAAD0/wUAAAAAAAAAAAD0/wYAAAAAAAAAAAD1/wAAAAAAAAAAAAD1/wMAAAAAAAAAAAD1/wQAAAAAAAAAAAD1/wUAAAAAAAAAAAD1/wYAAAAAAAAAAAD2/wAAAAAAAAAAAAD2/wMAAAAAAAAAAAD2/wQAAAAAAAAAAAD2/wUAAAAAAAAAAAD2/wYAAAAAAAAAAAD3/wAAAAAAAAAAAAD3/wMAAAAAAAAAAAD3/wQAAAAAAAAAAAD3/wUAAAAAAAAAAAD3/wYAAAAAAAAAAAD4/wAAAAAAAAAAAAD4/wMAAAAAAAAAAAD4/wQAAAAAAAAAAAD4/wUAAAAAAAAAAAD4/wYAAAAAAAAAAAD5/wAAAAAAAAAAAAD5/wMAAAAAAAAAAAD5/wQAAAAAAAAAAAD5/wUAAAAAAAAAAAD5/wYAAAAAAAAAAAD6/wAAAAAAAAAAAAD6/wMAAAAAAAAAAAD6/wQAAAAAAAAAAAD6/wUAAAAAAAAAAAD6/wYAAAAAAAAAAAD7/wAAAAAAAAAAAAD7/wMAAAAAAAAAAAD7/wQAAAAAAAAAAAD7/wUAAAAAAAAAAAD7/wYAAAAAAAAAAAD8/wMAAAAAAAAAAAD8/wQAAAAAAAAAAAD8/wUAAAAAAAAAAAD8/wYAAAAAAAAAAAD9/wMAAAAAAAAAAAD9/wQAAAAAAAAAAAD9/wUAAAAAAAAAAAD9/wYAAAAAAAAAAAD+/wMAAAAAAAAAAAD+/wQAAAAAAAAAAAD+/wUAAAAAAAAAAAD+/wYAAAAAAAAAAAD//wMAAAAAAAAAAAD//wQAAAAAAAAAAAD//wUAAAAAAAAAAAD//wYAAAAAAAAAAAAAAAMAAAAAAAAAAAAAAAQAAAAAAAAAAAAAAAUAAAAAAAAAAAAAAAYAAAAAAAAAAAABAAAAAAAAAAAAAAABAAEAAAAAAAAAAAABAAMAAAAAAAAAAAABAAQAAAAAAAAAAAABAAUAAAAAAAAAAAABAAYAAAAAAAAAAAACAAAAAAAAAAAAAAACAAEAAAAAAAAAAAACAAIAAAAAAAAAAAACAAMAAAAAAAAAAAACAAQAAAAAAAAAAAACAAUAAAAAAAAAAAACAAYAAAAAAAAAAAADAAAAAAAAAAAAAAADAAEAAAAAAAAAAAADAAIAAAAAAAAAAAADAAMAAAAAAAAAAAADAAQAAAAAAAAAAAADAAUAAAAAAAAAAAADAAYAAAAAAAAAAAAEAAAAAAAAAAAAAAAEAAEAAAAAAAAAAAAEAAIAAAAAAAAAAAAEAAMAAAAAAAAAAAAEAAQAAAAAAAAAAAAEAAUAAAAAAAAAAAAEAAYAAAAAAAAAAAAFAAAAAAAAAAAAAAAFAAEAAAAAAAAAAAAFAAIAAAAAAAAAAAAFAAMAAAAAAAAAAAAFAAQAAAAAAAAAAAAFAAUAAAAAAAAAAAAFAAYAAAAAAAAAAAAGAAAAAAAAAAAAAAAGAAEAAAAAAAAAAAAGAAIAAAAAAAAAAAAGAAMAAAAAAAAAAAAGAAQAAAAAAAAAAAAGAAUAAAAAAAAAAAAGAAYAAAAAAAAAAAAHAAAAAAAAAAAAAAAHAAEAAAAAAAAAAAAHAAIAAAAAAAAAAAAHAAMAAAAAAAAAAAAHAAQAAAAAAAAAAAAHAAUAAAAAAAAAAAAHAAYAAAAAAAAAAAAIAAAAAAAAAAAAAAAIAAEAAAAAAAAAAAAIAAIAAAAAAAAAAAAIAAMAAAAAAAAAAAAIAAQAAAAAAAAAAAAIAAUAAAAAAAAAAAAIAAYAAAAAAAAAAAAJAAAAAAAAAAAAAAAJAAEAAAAAAAAAAAAJAAIAAAAAAAAAAAAJAAMAAAAAAAAAAAAJAAQAAAAAAAAAAAAJAAUAAAAAAAAAAAAJAAYAAAAAAAAAAAAKAAAAAAAAAAAAAAAKAAEAAAAAAAAAAAAKAAIAAAAAAAAAAAAKAAMAAAAAAAAAAAAKAAQAAAAAAAAAAAAKAAUAAAAAAAAAAAAKAAYAAAAAAAAAAAALAAAAAAAAAAAAAAALAAEAAAAAAAAAAAALAAIAAAAAAAAAAAALAAMAAAAAAAAAAAALAAQAAAAAAAAAAAALAAUAAAAAAAAAAAALAAYAAAAAAAAAAAAMAAAAAAAAAAAAAAAMAAEAAAAAAAAAAAAMAAIAAAAAAAAAAAAMAAMAAAAAAAAAAAAMAAQAAAAAAAAAAAAMAAUAAAAAAAAAAAAMAAYAAAAAAAAAAAANAAAAAAAAAAAAAAANAAEAAAAAAAAAAAANAAIAAAAAAAAAAAANAAMAAAAAAAAAAAANAAQAAAAAAAAAAAANAAUAAAAAAAAAAAANAAYAAAAAAAAAAAAOAAAAAAAAAAAAAAAOAAEAAAAAAAAAAAAOAAIAAAAAAAAAAAAOAAMAAAAAAAAAAAAOAAQAAAAAAAAAAAAOAAUAAAAAAAAAAAAOAAYAAAAAAAAAAAAPAAAAAAAAAAAAAAAPAAEAAAAAAAAAAAAPAAIAAAAAAAAAAAAPAAMAAAAAAAAAAAAPAAQAAAAAAAAAAAAPAAUAAAAAAAAAAAAPAAYAAAAAAAAAAAAQAAAAAAAAAAAAAAAQAAEAAAAAAAAAAAAQAAIAAAAAAAAAAAAQAAMAAAAAAAAAAAAQAAQAAAAAAAAAAAAQAAUAAAAAAAAAAAAQAAYAAAAAAAAAAAARAAAAAAAAAAAAAAARAAEAAAAAAAAAAAARAAIAAAAAAAAAAAARAAMAAAAAAAAAAAARAAQAAAAAAAAAAAARAAUAAAAAAAAAAAARAAYAAAAAAAAAAAASAAAAAAAAAAAAAAASAAEAAAAAAAAAAAASAAIAAAAAAAAAAAASAAMAAAAAAAAAAAASAAQAAAAAAAAAAAASAAUAAAAAAAAAAAASAAYAAAAAAAAAAAATAAAAAAAAAAAAAAATAAEAAAAAAAAAAAATAAIAAAAAAAAAAAATAAMAAAAAAAAAAAATAAQAAAAAAAAAAAATAAUAAAAAAAAAAAATAAYAAAAAAAAAAAAUAAAAAAAAAAAAAAAUAAEAAAAAAAAAAAAUAAIAAAAAAAAAAAAUAAMAAAAAAAAAAAAUAAQAAAAAAAAAAAAUAAUAAAAAAAAAAAAUAAYAAAAAAAAAAAAVAAAAAAAAAAAAAAAVAAEAAAAAAAAAAAAVAAIAAAAAAAAAAAAVAAMAAAAAAAAAAAAVAAQAAAAAAAAAAAAVAAUAAAAAAAAAAAAVAAYAAAAAAAAAAAAWAAAAAAAAAAAAAAAWAAEAAAAAAAAAAAAWAAIAAAAAAAAAAAAWAAMAAAAAAAAAAAAWAAQAAAAAAAAAAAAWAAUAAAAAAAAAAAAWAAYAAAAAAAAAAAAXAAAAAAAAAAAAAAAXAAEAAAAAAAAAAAAXAAIAAAAAAAAAAAAXAAMAAAAAAAAAAAAXAAQAAAAAAAAAAAAXAAUAAAAAAAAAAAAXAAYAAAAAAAAAAAAYAAAAAAAAAAAAAAAYAAEAAAAAAAAAAAAYAAIAAAAAAAAAAAAYAAMAAAAAAAAAAAAYAAQAAAAAAAAAAAAYAAUAAAAAAAAAAAAYAAYAAAAAAAAAAAAZAAAAAAAAAAAAAAAZAAEAAAAAAAAAAAAZAAIAAAAAAAAAAAAZAAMAAAAAAAAAAAAZAAQAAAAAAAAAAAAZAAUAAAAAAAAAAAAZAAYAAAAAAAAAAAAaAAAAAAAAAAAAAAAaAAEAAAAAAAAAAAAaAAIAAAAAAAAAAAAaAAMAAAAAAAAAAAAaAAQAAAAAAAAAAAAaAAUAAAAAAAAAAAAaAAYAAAAAAAAAAADC/wAAAAAAAAAAAADC/wEAAAAAAAAAAADC/wIAAAAAAAAAAADC/wMAAAAAAAAAAADC/wQAAAAAAAAAAADC/wUAAAAAAAAAAADC/wYAAAAAAAAAAADD/wAAAAAAAAAAAADD/wEAAAAAAAAAAADD/wIAAAAAAAAAAADD/wMAAAAAAAAAAADD/wQAAAAAAAAAAADD/wUAAAAAAAAAAADD/wYAAAAAAAAAAADE/wAAAAAAAAAAAADE/wEAAAAAAAAAAADE/wIAAAAAAAAAAADE/wMAAAAAAAAAAADE/wQAAAAAAAAAAADE/wUAAAAAAAAAAADE/wYAAAAAAAAAAADF/wAAAAAAAAAAAADF/wEAAAAAAAAAAADF/wIAAAAAAAAAAADF/wMAAAAAAAAAAADF/wQAAAAAAAAAAADF/wUAAAAAAAAAAADF/wYAAAAAAAAAAADG/wAAAAAAAAAAAADG/wEAAAAAAAAAAADG/wIAAAAAAAAAAADG/wMAAAAAAAAAAADG/wQAAAAAAAAAAADG/wUAAAAAAAAAAADG/wYAAAAAAAAAAADH/wAAAAAAAAAAAADH/wEAAAAAAAAAAADH/wIAAAAAAAAAAADH/wMAAAAAAAAAAADH/wQAAAAAAAAAAADH/wUAAAAAAAAAAADH/wYAAAAAAAAAAADI/wAAAAAAAAAAAADI/wEAAAAAAAAAAADI/wIAAAAAAAAAAADI/wMAAAAAAAAAAADI/wQAAAAAAAAAAADI/wUAAAAAAAAAAADI/wYAAAAAAAAAAADJ/wAAAAAAAAAAAADJ/wEAAAAAAAAAAADJ/wIAAAAAAAAAAADJ/wMAAAAAAAAAAADJ/wQAAAAAAAAAAADJ/wUAAAAAAAAAAADJ/wYAAAAAAAAAAADK/wAAAAAAAAAAAADK/wEAAAAAAAAAAADK/wIAAAAAAAAAAADK/wMAAAAAAAAAAADK/wQAAAAAAAAAAADK/wUAAAAAAAAAAADK/wYAAAAAAAAAAADL/wAAAAAAAAAAAADL/wEAAAAAAAAAAADL/wIAAAAAAAAAAADL/wMAAAAAAAAAAADL/wQAAAAAAAAAAADL/wUAAAAAAAAAAADL/wYAAAAAAAAAAADM/wAAAAAAAAAAAADM/wEAAAAAAAAAAADM/wIAAAAAAAAAAADM/wMAAAAAAAAAAADM/wQAAAAAAAAAAADM/wUAAAAAAAAAAADM/wYAAAAAAAAAAADN/wAAAAAAAAAAAADN/wEAAAAAAAAAAADN/wIAAAAAAAAAAADN/wMAAAAAAAAAAADN/wQAAAAAAAAAAADN/wUAAAAAAAAAAADN/wYAAAAAAAAAAADO/wAAAAAAAAAAAADO/wEAAAAAAAAAAADO/wIAAAAAAAAAAADO/wMAAAAAAAAAAADO/wQAAAAAAAAAAADO/wUAAAAAAAAAAADO/wYAAAAAAAAAAADP/wAAAAAAAAAAAADP/wMAAAAAAAAAAADP/wQAAAAAAAAAAADP/wUAAAAAAAAAAADP/wYAAAAAAAAAAADQ/wMAAAAAAAAAAADQ/wQAAAAAAAAAAADQ/wUAAAAAAAAAAADQ/wYAAAAAAAAAAADR/wMAAAAAAAAAAADR/wQAAAAAAAAAAADR/wUAAAAAAAAAAADR/wYAAAAAAAAAAADS/wMAAAAAAAAAAADS/wQAAAAAAAAAAADS/wUAAAAAAAAAAADS/wYAAAAAAAAAAADT/wMAAAAAAAAAAADT/wQAAAAAAAAAAADT/wUAAAAAAAAAAADT/wYAAAAAAAAAAADU/wEAAAAAAAAAAADU/wIAAAAAAAAAAADU/wMAAAAAAAAAAADU/wQAAAAAAAAAAADU/wUAAAAAAAAAAADU/wYAAAAAAAAAAADV/wEAAAAAAAAAAADV/wIAAAAAAAAAAADV/wMAAAAAAAAAAADV/wQAAAAAAAAAAADV/wUAAAAAAAAAAADV/wYAAAAAAAAAAADW/wEAAAAAAAAAAADW/wIAAAAAAAAAAADW/wMAAAAAAAAAAADW/wQAAAAAAAAAAADW/wUAAAAAAAAAAADW/wYAAAAAAAAAAADX/wEAAAAAAAAAAADX/wIAAAAAAAAAAADX/wMAAAAAAAAAAADX/wQAAAAAAAAAAADX/wUAAAAAAAAAAADX/wYAAAAAAAAAAADY/wEAAAAAAAAAAADY/wIAAAAAAAAAAADY/wMAAAAAAAAAAADY/wQAAAAAAAAAAADY/wUAAAAAAAAAAADY/wYAAAAAAAAAAADZ/wEAAAAAAAAAAADZ/wIAAAAAAAAAAADZ/wMAAAAAAAAAAADZ/wQAAAAAAAAAAADZ/wUAAAAAAAAAAADZ/wYAAAAAAAAAAADa/wEAAAAAAAAAAADa/wIAAAAAAAAAAADa/wMAAAAAAAAAAADa/wQAAAAAAAAAAADa/wUAAAAAAAAAAADa/wYAAAAAAAAAAADb/wEAAAAAAAAAAADb/wIAAAAAAAAAAADb/wMAAAAAAAAAAADb/wQAAAAAAAAAAADb/wUAAAAAAAAAAADb/wYAAAAAAAAAAADc/wAAAAAAAAAAAADc/wEAAAAAAAAAAADc/wIAAAAAAAAAAADc/wMAAAAAAAAAAADc/wQAAAAAAAAAAADc/wUAAAAAAAAAAADc/wYAAAAAAAAAAADd/wAAAAAAAAAAAADd/wEAAAAAAAAAAADd/wIAAAAAAAAAAADd/wMAAAAAAAAAAADd/wQAAAAAAAAAAADd/wUAAAAAAAAAAADd/wYAAAAAAAAAAADe/wAAAAAAAAAAAADe/wEAAAAAAAAAAADe/wIAAAAAAAAAAADe/wMAAAAAAAAAAADe/wQAAAAAAAAAAADe/wUAAAAAAAAAAADe/wYAAAAAAAAAAADf/wAAAAAAAAAAAADf/wEAAAAAAAAAAADf/wIAAAAAAAAAAADf/wMAAAAAAAAAAADf/wQAAAAAAAAAAADf/wUAAAAAAAAAAADf/wYAAAAAAAAAAADg/wAAAAAAAAAAAADg/wEAAAAAAAAAAADg/wIAAAAAAAAAAADg/wMAAAAAAAAAAADg/wQAAAAAAAAAAADg/wUAAAAAAAAAAADg/wYAAAAAAAAAAADh/wAAAAAAAAAAAADh/wEAAAAAAAAAAADh/wIAAAAAAAAAAADh/wMAAAAAAAAAAADh/wQAAAAAAAAAAADh/wUAAAAAAAAAAADh/wYAAAAAAAAAAADi/wAAAAAAAAAAAADi/wEAAAAAAAAAAADi/wIAAAAAAAAAAADi/wMAAAAAAAAAAADi/wQAAAAAAAAAAADi/wUAAAAAAAAAAADi/wYAAAAAAAAAAADj/wAAAAAAAAAAAADj/wEAAAAAAAAAAADj/wIAAAAAAAAAAADj/wMAAAAAAAAAAADj/wQAAAAAAAAAAADj/wUAAAAAAAAAAADj/wYAAAAAAAAAAADk/wAAAAAAAAAAAADk/wEAAAAAAAAAAADk/wIAAAAAAAAAAADk/wMAAAAAAAAAAADk/wQAAAAAAAAAAADk/wUAAAAAAAAAAADk/wYAAAAAAAAAAADl/wAAAAAAAAAAAADl/wEAAAAAAAAAAADl/wIAAAAAAAAAAADl/wMAAAAAAAAAAADl/wQAAAAAAAAAAADl/wUAAAAAAAAAAADl/wYAAAAAAAAAAADm/wAAAAAAAAAAAADm/wEAAAAAAAAAAADm/wIAAAAAAAAAAADm/wMAAAAAAAAAAADm/wQAAAAAAAAAAADm/wUAAAAAAAAAAADm/wYAAAAAAAAAAADC//v/AAAAAAAAAADC//z/AAAAAAAAAADC//3/AAAAAAAAAADC//7/AAAAAAAAAADC////AAAAAAAAAADD//v/AAAAAAAAAADD//z/AAAAAAAAAADD//3/AAAAAAAAAADD//7/AAAAAAAAAADD////AAAAAAAAAADE//v/AAAAAAAAAADE//z/AAAAAAAAAADE//3/AAAAAAAAAADE//7/AAAAAAAAAADE////AAAAAAAAAADF//v/AAAAAAAAAADF//z/AAAAAAAAAADF//3/AAAAAAAAAADF//7/AAAAAAAAAADF////AAAAAAAAAADG//v/AAAAAAAAAADG//z/AAAAAAAAAADG//3/AAAAAAAAAADG//7/AAAAAAAAAADG////AAAAAAAAAADH//v/AAAAAAAAAADH//z/AAAAAAAAAADH//3/AAAAAAAAAADH//7/AAAAAAAAAADH////AAAAAAAAAADI//v/AAAAAAAAAADI//z/AAAAAAAAAADI//3/AAAAAAAAAADI//7/AAAAAAAAAADI////AAAAAAAAAAC+//T/AAAAAAAAAAC+//X/AAAAAAAAAAC+//b/AAAAAAAAAAC+//f/AAAAAAAAAAC+//j/AAAAAAAAAAC+//n/AAAAAAAAAAC+//r/AAAAAAAAAAC+//v/AAAAAAAAAAC+//z/AAAAAAAAAAC///T/AAAAAAAAAAC///X/AAAAAAAAAAC///b/AAAAAAAAAAC///f/AAAAAAAAAAC///j/AAAAAAAAAAC///n/AAAAAAAAAAC///r/AAAAAAAAAAC///v/AAAAAAAAAAC///z/AAAAAAAAAADA//T/AAAAAAAAAADA//X/AAAAAAAAAADA//b/AAAAAAAAAADA//f/AAAAAAAAAADA//j/AAAAAAAAAADA//n/AAAAAAAAAADA//r/AAAAAAAAAADA//v/AAAAAAAAAADA//z/AAAAAAAAAADB//T/AAAAAAAAAADB//X/AAAAAAAAAADB//b/AAAAAAAAAADB//f/AAAAAAAAAADB//j/AAAAAAAAAADB//n/AAAAAAAAAADB//r/AAAAAAAAAADB//v/AAAAAAAAAADB//z/AAAAAAAAAADC//T/AAAAAAAAAADC//X/AAAAAAAAAADC//b/AAAAAAAAAADC//f/AAAAAAAAAADC//j/AAAAAAAAAADC//n/AAAAAAAAAADC//r/AAAAAAAAAADD//T/AAAAAAAAAADD//X/AAAAAAAAAADD//b/AAAAAAAAAADD//f/AAAAAAAAAADD//j/AAAAAAAAAADD//n/AAAAAAAAAADD//r/AAAAAAAAAADE//T/AAAAAAAAAADE//X/AAAAAAAAAADE//b/AAAAAAAAAADE//f/AAAAAAAAAADE//j/AAAAAAAAAADE//n/AAAAAAAAAADE//r/AAAAAAAAAADF//T/AAAAAAAAAADF//X/AAAAAAAAAADF//b/AAAAAAAAAADF//f/AAAAAAAAAADF//j/AAAAAAAAAADF//n/AAAAAAAAAADF//r/AAAAAAAAAADG//T/AAAAAAAAAADG//X/AAAAAAAAAADG//b/AAAAAAAAAADG//f/AAAAAAAAAADG//j/AAAAAAAAAADG//n/AAAAAAAAAADG//r/AAAAAAAAAAC5//T/AAAAAAAAAAC5//X/AAAAAAAAAAC5//b/AAAAAAAAAAC5//f/AAAAAAAAAAC5//j/AAAAAAAAAAC5//n/AAAAAAAAAAC5//r/AAAAAAAAAAC5//v/AAAAAAAAAAC5//z/AAAAAAAAAAC5//3/AAAAAAAAAAC5//7/AAAAAAAAAAC5////AAAAAAAAAAC5/wAAAAAAAAAAAAC5/wEAAAAAAAAAAAC5/wIAAAAAAAAAAAC5/wMAAAAAAAAAAAC5/wQAAAAAAAAAAAC5/wUAAAAAAAAAAAC5/wYAAAAAAAAAAAC6//T/AAAAAAAAAAC6//X/AAAAAAAAAAC6//b/AAAAAAAAAAC6//f/AAAAAAAAAAC6//j/AAAAAAAAAAC6//n/AAAAAAAAAAC6//r/AAAAAAAAAAC6//v/AAAAAAAAAAC6//z/AAAAAAAAAAC6//3/AAAAAAAAAAC6//7/AAAAAAAAAAC6////AAAAAAAAAAC6/wAAAAAAAAAAAAC6/wEAAAAAAAAAAAC6/wIAAAAAAAAAAAC6/wMAAAAAAAAAAAC6/wQAAAAAAAAAAAC6/wUAAAAAAAAAAAC6/wYAAAAAAAAAAAC7//T/AAAAAAAAAAC7//X/AAAAAAAAAAC7//b/AAAAAAAAAAC7//f/AAAAAAAAAAC7//j/AAAAAAAAAAC7//n/AAAAAAAAAAC7//r/AAAAAAAAAAC7//v/AAAAAAAAAAC7//z/AAAAAAAAAAC7//3/AAAAAAAAAAC7//7/AAAAAAAAAAC7////AAAAAAAAAAC7/wAAAAAAAAAAAAC7/wEAAAAAAAAAAAC7/wIAAAAAAAAAAAC7/wMAAAAAAAAAAAC7/wQAAAAAAAAAAAC7/wUAAAAAAAAAAAC7/wYAAAAAAAAAAAC8//T/AAAAAAAAAAC8//X/AAAAAAAAAAC8//b/AAAAAAAAAAC8//f/AAAAAAAAAAC8//j/AAAAAAAAAAC8//n/AAAAAAAAAAC8//r/AAAAAAAAAAC8//v/AAAAAAAAAAC8//z/AAAAAAAAAAC8//3/AAAAAAAAAAC8//7/AAAAAAAAAAC8////AAAAAAAAAAC8/wAAAAAAAAAAAAC8/wEAAAAAAAAAAAC8/wIAAAAAAAAAAAC8/wMAAAAAAAAAAAC8/wQAAAAAAAAAAAC8/wUAAAAAAAAAAAC8/wYAAAAAAAAAAAC9//T/AAAAAAAAAAC9//X/AAAAAAAAAAC9//b/AAAAAAAAAAC9//f/AAAAAAAAAAC9//j/AAAAAAAAAAC9//n/AAAAAAAAAAC9//r/AAAAAAAAAAC9//v/AAAAAAAAAAC9//z/AAAAAAAAAAC9//3/AAAAAAAAAAC9//7/AAAAAAAAAAC9////AAAAAAAAAAC9/wAAAAAAAAAAAAC9/wEAAAAAAAAAAAC9/wIAAAAAAAAAAAC9/wMAAAAAAAAAAAC9/wQAAAAAAAAAAAC9/wUAAAAAAAAAAAC9/wYAAAAAAAAAAAC+//3/AAAAAAAAAAC+//7/AAAAAAAAAAC+////AAAAAAAAAAC+/wAAAAAAAAAAAAC+/wEAAAAAAAAAAAC+/wIAAAAAAAAAAAC+/wMAAAAAAAAAAAC+/wQAAAAAAAAAAAC+/wUAAAAAAAAAAAC+/wYAAAAAAAAAAAC///3/AAAAAAAAAAC///7/AAAAAAAAAAC/////AAAAAAAAAAC//wAAAAAAAAAAAAC//wEAAAAAAAAAAAC//wIAAAAAAAAAAAC//wMAAAAAAAAAAAC//wQAAAAAAAAAAAC//wUAAAAAAAAAAAC//wYAAAAAAAAAAADA//3/AAAAAAAAAADA//7/AAAAAAAAAADA////AAAAAAAAAADA/wAAAAAAAAAAAADA/wEAAAAAAAAAAADA/wIAAAAAAAAAAADA/wMAAAAAAAAAAADA/wQAAAAAAAAAAADA/wUAAAAAAAAAAADA/wYAAAAAAAAAAADB//3/AAAAAAAAAADB//7/AAAAAAAAAADB////AAAAAAAAAADB/wAAAAAAAAAAAADB/wEAAAAAAAAAAADB/wIAAAAAAAAAAADB/wMAAAAAAAAAAADB/wQAAAAAAAAAAADB/wUAAAAAAAAAAADB/wYAAAAAAAAAAAC5/+7/AAAAAAAAAAC5/+//AAAAAAAAAAC5//D/AAAAAAAAAAC5//H/AAAAAAAAAAC5//L/AAAAAAAAAAC5//P/AAAAAAAAAAC6/+7/AAAAAAAAAAC6/+//AAAAAAAAAAC6//D/AAAAAAAAAAC6//H/AAAAAAAAAAC6//L/AAAAAAAAAAC6//P/AAAAAAAAAAC7/+7/AAAAAAAAAAC7/+//AAAAAAAAAAC7//D/AAAAAAAAAAC7//H/AAAAAAAAAAC7//L/AAAAAAAAAAC7//P/AAAAAAAAAAC8/+7/AAAAAAAAAAC8/+//AAAAAAAAAAC8//D/AAAAAAAAAAC8//H/AAAAAAAAAAC8//L/AAAAAAAAAAC8//P/AAAAAAAAAAC9/+7/AAAAAAAAAAC9/+//AAAAAAAAAAC9//D/AAAAAAAAAAC9//H/AAAAAAAAAAC9//L/AAAAAAAAAAC9//P/AAAAAAAAAAC+/+7/AAAAAAAAAAC+/+//AAAAAAAAAAC+//D/AAAAAAAAAAC+//H/AAAAAAAAAAC+//L/AAAAAAAAAAC+//P/AAAAAAAAAAC//+7/AAAAAAAAAAC//+//AAAAAAAAAAC///D/AAAAAAAAAAC///H/AAAAAAAAAAC///L/AAAAAAAAAAC///P/AAAAAAAAAADA//H/AAAAAAAAAADA//L/AAAAAAAAAADA//P/AAAAAAAAAADB//H/AAAAAAAAAADB//L/AAAAAAAAAADB//P/AAAAAAAAAAAbAPb/AAAAAAAAAAAbAPf/AAAAAAAAAAAbAPj/AAAAAAAAAAAbAPn/AAAAAAAAAAAbAPr/AAAAAAAAAAAbAPv/AAAAAAAAAAAbAPz/AAAAAAAAAAAbAP3/AAAAAAAAAAAbAP7/AAAAAAAAAAAbAP//AAAAAAAAAAAbAAAAAAAAAAAAAAAbAAEAAAAAAAAAAAAbAAIAAAAAAAAAAAAbAAMAAAAAAAAAAAAbAAQAAAAAAAAAAAAbAAUAAAAAAAAAAAAbAAYAAAAAAAAAAAAcAPb/AAAAAAAAAAAcAPf/AAAAAAAAAAAcAPj/AAAAAAAAAAAcAPn/AAAAAAAAAAAcAPr/AAAAAAAAAAAcAPv/AAAAAAAAAAAcAPz/AAAAAAAAAAAcAP3/AAAAAAAAAAAcAP7/AAAAAAAAAAAcAP//AAAAAAAAAAAcAAAAAAAAAAAAAAAcAAEAAAAAAAAAAAAcAAIAAAAAAAAAAAAcAAMAAAAAAAAAAAAcAAQAAAAAAAAAAAAcAAUAAAAAAAAAAAAcAAYAAAAAAAAAAAAdAPb/AAAAAAAAAAAdAPf/AAAAAAAAAAAdAPj/AAAAAAAAAAAdAPn/AAAAAAAAAAAdAPr/AAAAAAAAAAAdAPv/AAAAAAAAAAAdAPz/AAAAAAAAAAAdAP3/AAAAAAAAAAAdAP7/AAAAAAAAAAAdAP//AAAAAAAAAAAdAAAAAAAAAAAAAAAdAAEAAAAAAAAAAAAdAAIAAAAAAAAAAAAdAAMAAAAAAAAAAAAdAAQAAAAAAAAAAAAdAAUAAAAAAAAAAAAdAAYAAAAAAAAAAAAeAPb/AAAAAAAAAAAeAPf/AAAAAAAAAAAeAPj/AAAAAAAAAAAeAPn/AAAAAAAAAAAeAPr/AAAAAAAAAAAeAPv/AAAAAAAAAAAeAPz/AAAAAAAAAAAeAP3/AAAAAAAAAAAeAP7/AAAAAAAAAAAeAP//AAAAAAAAAAAeAAAAAAAAAAAAAAAeAAEAAAAAAAAAAAAeAAIAAAAAAAAAAAAeAAMAAAAAAAAAAAAeAAQAAAAAAAAAAAAeAAUAAAAAAAAAAAAeAAYAAAAAAAAAAAAfAPb/AAAAAAAAAAAfAPf/AAAAAAAAAAAfAPj/AAAAAAAAAAAfAPn/AAAAAAAAAAAfAPr/AAAAAAAAAAAfAPv/AAAAAAAAAAAfAPz/AAAAAAAAAAAfAP3/AAAAAAAAAAAfAP7/AAAAAAAAAAAfAP//AAAAAAAAAAAfAAAAAAAAAAAAAAAfAAEAAAAAAAAAAAAfAAIAAAAAAAAAAAAfAAMAAAAAAAAAAAAfAAQAAAAAAAAAAAAfAAUAAAAAAAAAAAAfAAYAAAAAAAAAAAAgAPb/AAAAAAAAAAAgAPf/AAAAAAAAAAAgAPj/AAAAAAAAAAAgAPn/AAAAAAAAAAAgAPr/AAAAAAAAAAAgAPv/AAAAAAAAAAAgAPz/AAAAAAAAAAAgAP3/AAAAAAAAAAAgAP7/AAAAAAAAAAAgAP//AAAAAAAAAAAgAAAAAAAAAAAAAAAgAAEAAAAAAAAAAAAgAAIAAAAAAAAAAAAgAAMAAAAAAAAAAAAgAAQAAAAAAAAAAAAgAAUAAAAAAAAAAAAgAAYAAAAAAAAAAAAhAPb/AAAAAAAAAAAhAPf/AAAAAAAAAAAhAPj/AAAAAAAAAAAhAPn/AAAAAAAAAAAhAPr/AAAAAAAAAAAhAPv/AAAAAAAAAAAhAPz/AAAAAAAAAAAhAP3/AAAAAAAAAAAhAP7/AAAAAAAAAAAhAP//AAAAAAAAAAAhAAAAAAAAAAAAAAAhAAEAAAAAAAAAAAAhAAIAAAAAAAAAAAAhAAMAAAAAAAAAAAAhAAQAAAAAAAAAAAAhAAUAAAAAAAAAAAAhAAYAAAAAAAAAAAAiAPb/AAAAAAAAAAAiAPf/AAAAAAAAAAAiAPj/AAAAAAAAAAAiAPn/AAAAAAAAAAAiAPr/AAAAAAAAAAAiAPv/AAAAAAAAAAAiAPz/AAAAAAAAAAAiAP3/AAAAAAAAAAAiAP7/AAAAAAAAAAAiAP//AAAAAAAAAAAiAAAAAAAAAAAAAAAiAAEAAAAAAAAAAAAiAAIAAAAAAAAAAAAiAAMAAAAAAAAAAAAiAAQAAAAAAAAAAAAiAAUAAAAAAAAAAAAiAAYAAAAAAAAAAAAjAPb/AAAAAAAAAAAjAPf/AAAAAAAAAAAjAPj/AAAAAAAAAAAjAPn/AAAAAAAAAAAjAPr/AAAAAAAAAAAjAPv/AAAAAAAAAAAjAPz/AAAAAAAAAAAjAP3/AAAAAAAAAAAjAP7/AAAAAAAAAAAjAP//AAAAAAAAAAAjAAAAAAAAAAAAAAAjAAEAAAAAAAAAAAAjAAIAAAAAAAAAAAAjAAMAAAAAAAAAAAAjAAQAAAAAAAAAAAAjAAUAAAAAAAAAAAAjAAYAAAAAAAAAAAAkAPb/AAAAAAAAAAAkAPf/AAAAAAAAAAAkAPj/AAAAAAAAAAAkAPn/AAAAAAAAAAAkAPr/AAAAAAAAAAAkAPv/AAAAAAAAAAAkAPz/AAAAAAAAAAAkAP3/AAAAAAAAAAAkAP7/AAAAAAAAAAAkAP//AAAAAAAAAAAkAAAAAAAAAAAAAAAkAAEAAAAAAAAAAAAkAAIAAAAAAAAAAAAkAAMAAAAAAAAAAAAkAAQAAAAAAAAAAAAkAAUAAAAAAAAAAAAkAAYAAAAAAAAAAAAlAPb/AAAAAAAAAAAlAPf/AAAAAAAAAAAlAPj/AAAAAAAAAAAlAPn/AAAAAAAAAAAlAPr/AAAAAAAAAAAlAPv/AAAAAAAAAAAlAPz/AAAAAAAAAAAlAP3/AAAAAAAAAAAlAP7/AAAAAAAAAAAlAP//AAAAAAAAAAAlAAAAAAAAAAAAAAAlAAEAAAAAAAAAAAAlAAIAAAAAAAAAAAAlAAMAAAAAAAAAAAAlAAQAAAAAAAAAAAAlAAUAAAAAAAAAAAAlAAYAAAAAAAAAAAAmAPb/AAAAAAAAAAAmAPf/AAAAAAAAAAAmAPj/AAAAAAAAAAAmAPn/AAAAAAAAAAAmAPr/AAAAAAAAAAAmAPv/AAAAAAAAAAAmAPz/AAAAAAAAAAAmAP3/AAAAAAAAAAAmAP7/AAAAAAAAAAAmAP//AAAAAAAAAAAmAAAAAAAAAAAAAAAmAAEAAAAAAAAAAAAmAAIAAAAAAAAAAAAmAAMAAAAAAAAAAAAmAAQAAAAAAAAAAAAmAAUAAAAAAAAAAAAmAAYAAAAAAAAAAAAnAPb/AAAAAAAAAAAnAPf/AAAAAAAAAAAnAPj/AAAAAAAAAAAnAPn/AAAAAAAAAAAnAPr/AAAAAAAAAAAnAPv/AAAAAAAAAAAnAPz/AAAAAAAAAAAnAP3/AAAAAAAAAAAnAP7/AAAAAAAAAAAnAP//AAAAAAAAAAAnAAAAAAAAAAAAAAAnAAEAAAAAAAAAAAAnAAIAAAAAAAAAAAAnAAMAAAAAAAAAAAAnAAQAAAAAAAAAAAAnAAUAAAAAAAAAAAAnAAYAAAAAAAAAAAAoAPb/AAAAAAAAAAAoAPf/AAAAAAAAAAAoAPj/AAAAAAAAAAAoAPn/AAAAAAAAAAAoAPr/AAAAAAAAAAAoAPv/AAAAAAAAAAAoAPz/AAAAAAAAAAAoAP3/AAAAAAAAAAAoAP7/AAAAAAAAAAAoAP//AAAAAAAAAAAoAAAAAAAAAAAAAAAoAAEAAAAAAAAAAAAoAAIAAAAAAAAAAAAoAAMAAAAAAAAAAAAoAAQAAAAAAAAAAAAoAAUAAAAAAAAAAAAoAAYAAAAAAAAAAAApAPb/AAAAAAAAAAApAPf/AAAAAAAAAAApAPj/AAAAAAAAAAApAPn/AAAAAAAAAAApAPr/AAAAAAAAAAApAPv/AAAAAAAAAAApAPz/AAAAAAAAAAApAP3/AAAAAAAAAAApAP7/AAAAAAAAAAApAP//AAAAAAAAAAApAAAAAAAAAAAAAAApAAEAAAAAAAAAAAApAAIAAAAAAAAAAAApAAMAAAAAAAAAAAApAAQAAAAAAAAAAAApAAUAAAAAAAAAAAApAAYAAAAAAAAAAAAhAPH/AAAAAAAAAAAhAPL/AAAAAAAAAAAhAPP/AAAAAAAAAAAhAPT/AAAAAAAAAAAhAPX/AAAAAAAAAAAiAPH/AAAAAAAAAAAiAPL/AAAAAAAAAAAiAPP/AAAAAAAAAAAiAPT/AAAAAAAAAAAiAPX/AAAAAAAAAAAjAPH/AAAAAAAAAAAjAPL/AAAAAAAAAAAjAPP/AAAAAAAAAAAjAPT/AAAAAAAAAAAjAPX/AAAAAAAAAAAkAPH/AAAAAAAAAAAkAPL/AAAAAAAAAAAkAPP/AAAAAAAAAAAkAPT/AAAAAAAAAAAkAPX/AAAAAAAAAAAlAPH/AAAAAAAAAAAlAPL/AAAAAAAAAAAlAPP/AAAAAAAAAAAlAPT/AAAAAAAAAAAlAPX/AAAAAAAAAAAmAPH/AAAAAAAAAAAmAPL/AAAAAAAAAAAmAPP/AAAAAAAAAAAmAPT/AAAAAAAAAAAmAPX/AAAAAAAAAAAnAPH/AAAAAAAAAAAnAPL/AAAAAAAAAAAnAPP/AAAAAAAAAAAnAPT/AAAAAAAAAAAnAPX/AAAAAAAAAAAoAPH/AAAAAAAAAAAoAPL/AAAAAAAAAAAoAPP/AAAAAAAAAAAoAPT/AAAAAAAAAAAoAPX/AAAAAAAAAAAnAO3/AAAAAAAAAAAnAO7/AAAAAAAAAAAnAO//AAAAAAAAAAAnAPD/AAAAAAAAAAAoAO3/AAAAAAAAAAAoAO7/AAAAAAAAAAAoAO//AAAAAAAAAAAoAPD/AAAAAAAAAAApAO3/AAAAAAAAAAApAO7/AAAAAAAAAAApAO//AAAAAAAAAAApAPD/AAAAAAAAAAApAPH/AAAAAAAAAAApAPL/AAAAAAAAAAApAPP/AAAAAAAAAAApAPT/AAAAAAAAAAApAPX/AAAAAAAAAAAqAO3/AAAAAAAAAAAqAO7/AAAAAAAAAAAqAO//AAAAAAAAAAAqAPD/AAAAAAAAAAAqAPH/AAAAAAAAAAAqAPL/AAAAAAAAAAAqAPP/AAAAAAAAAAAqAPT/AAAAAAAAAAAqAPX/AAAAAAAAAAAqAPb/AAAAAAAAAAArAO3/AAAAAAAAAAArAO7/AAAAAAAAAAArAO//AAAAAAAAAAArAPD/AAAAAAAAAAArAPH/AAAAAAAAAAArAPL/AAAAAAAAAAArAPP/AAAAAAAAAAArAPT/AAAAAAAAAAArAPX/AAAAAAAAAAArAPb/AAAAAAAAAAAsAO3/AAAAAAAAAAAsAO7/AAAAAAAAAAAsAO//AAAAAAAAAAAsAPD/AAAAAAAAAAAsAPH/AAAAAAAAAAAsAPL/AAAAAAAAAAAsAPP/AAAAAAAAAAAsAPT/AAAAAAAAAAAsAPX/AAAAAAAAAAAsAPb/AAAAAAAAAAAtAO3/AAAAAAAAAAAtAO7/AAAAAAAAAAAtAO//AAAAAAAAAAAtAPD/AAAAAAAAAAAtAPH/AAAAAAAAAAAtAPL/AAAAAAAAAAAtAPP/AAAAAAAAAAAtAPT/AAAAAAAAAAAtAPX/AAAAAAAAAAAtAPb/AAAAAAAAAAAuAO3/AAAAAAAAAAAuAO7/AAAAAAAAAAAuAO//AAAAAAAAAAAuAPD/AAAAAAAAAAAuAPH/AAAAAAAAAAAuAPL/AAAAAAAAAAAuAPP/AAAAAAAAAAAuAPT/AAAAAAAAAAAuAPX/AAAAAAAAAAAuAPb/AAAAAAAAAAAvAO3/AAAAAAAAAAAvAO7/AAAAAAAAAAAvAO//AAAAAAAAAAAvAPD/AAAAAAAAAAAvAPH/AAAAAAAAAAAvAPL/AAAAAAAAAAAvAPP/AAAAAAAAAAAvAPT/AAAAAAAAAAAvAPX/AAAAAAAAAAAvAPb/AAAAAAAAAAAwAO3/AAAAAAAAAAAwAO7/AAAAAAAAAAAwAO//AAAAAAAAAAAwAPD/AAAAAAAAAAAwAPH/AAAAAAAAAAAwAPL/AAAAAAAAAAAwAPP/AAAAAAAAAAAwAPT/AAAAAAAAAAAwAPX/AAAAAAAAAAAwAPb/AAAAAAAAAAAxAO3/AAAAAAAAAAAxAO7/AAAAAAAAAAAxAO//AAAAAAAAAAAxAPD/AAAAAAAAAAAxAPH/AAAAAAAAAAAxAPL/AAAAAAAAAAAxAPP/AAAAAAAAAAAxAPT/AAAAAAAAAAAxAPX/AAAAAAAAAAAxAPb/AAAAAAAAAAAqAPf/AAAAAAAAAAAqAPj/AAAAAAAAAAAqAPn/AAAAAAAAAAAqAPr/AAAAAAAAAAAqAPv/AAAAAAAAAAAqAPz/AAAAAAAAAAAqAP3/AAAAAAAAAAAqAP7/AAAAAAAAAAAqAP//AAAAAAAAAAAqAAAAAAAAAAAAAAAqAAEAAAAAAAAAAAAqAAIAAAAAAAAAAAAqAAMAAAAAAAAAAAAqAAQAAAAAAAAAAAAqAAUAAAAAAAAAAAAqAAYAAAAAAAAAAAArAPf/AAAAAAAAAAArAPj/AAAAAAAAAAArAPn/AAAAAAAAAAArAPr/AAAAAAAAAAArAPv/AAAAAAAAAAArAPz/AAAAAAAAAAArAP3/AAAAAAAAAAArAP7/AAAAAAAAAAArAP//AAAAAAAAAAArAAAAAAAAAAAAAAArAAEAAAAAAAAAAAArAAIAAAAAAAAAAAArAAMAAAAAAAAAAAArAAQAAAAAAAAAAAArAAUAAAAAAAAAAAArAAYAAAAAAAAAAAAsAPf/AAAAAAAAAAAsAPj/AAAAAAAAAAAsAPn/AAAAAAAAAAAsAPr/AAAAAAAAAAAsAPv/AAAAAAAAAAAsAPz/AAAAAAAAAAAsAP3/AAAAAAAAAAAsAP7/AAAAAAAAAAAsAP//AAAAAAAAAAAsAAAAAAAAAAAAAAAsAAEAAAAAAAAAAAAsAAIAAAAAAAAAAAAsAAMAAAAAAAAAAAAsAAQAAAAAAAAAAAAsAAUAAAAAAAAAAAAsAAYAAAAAAAAAAAAtAPf/AAAAAAAAAAAtAPj/AAAAAAAAAAAtAPn/AAAAAAAAAAAtAPr/AAAAAAAAAAAtAPv/AAAAAAAAAAAtAPz/AAAAAAAAAAAtAP3/AAAAAAAAAAAtAP7/AAAAAAAAAAAtAP//AAAAAAAAAAAtAAAAAAAAAAAAAAAtAAEAAAAAAAAAAAAtAAIAAAAAAAAAAAAtAAMAAAAAAAAAAAAtAAQAAAAAAAAAAAAtAAUAAAAAAAAAAAAtAAYAAAAAAAAAAAAuAPf/AAAAAAAAAAAuAPj/AAAAAAAAAAAuAPn/AAAAAAAAAAAuAPr/AAAAAAAAAAAuAPv/AAAAAAAAAAAuAPz/AAAAAAAAAAAuAP3/AAAAAAAAAAAuAP7/AAAAAAAAAAAuAP//AAAAAAAAAAAuAAAAAAAAAAAAAAAuAAEAAAAAAAAAAAAuAAIAAAAAAAAAAAAuAAMAAAAAAAAAAAAuAAQAAAAAAAAAAAAuAAUAAAAAAAAAAAAuAAYAAAAAAAAAAAAvAPf/AAAAAAAAAAAvAPj/AAAAAAAAAAAvAPn/AAAAAAAAAAAvAPr/AAAAAAAAAAAvAPv/AAAAAAAAAAAvAPz/AAAAAAAAAAAvAP3/AAAAAAAAAAAvAP7/AAAAAAAAAAAvAP//AAAAAAAAAAAvAAAAAAAAAAAAAAAvAAEAAAAAAAAAAAAvAAIAAAAAAAAAAAAvAAMAAAAAAAAAAAAvAAQAAAAAAAAAAAAvAAUAAAAAAAAAAAAvAAYAAAAAAAAAAAAwAPf/AAAAAAAAAAAwAPj/AAAAAAAAAAAwAPn/AAAAAAAAAAAwAPr/AAAAAAAAAAAwAPv/AAAAAAAAAAAwAPz/AAAAAAAAAAAwAP3/AAAAAAAAAAAwAP7/AAAAAAAAAAAwAP//AAAAAAAAAAAwAAAAAAAAAAAAAAAwAAEAAAAAAAAAAAAwAAIAAAAAAAAAAAAwAAMAAAAAAAAAAAAwAAQAAAAAAAAAAAAwAAUAAAAAAAAAAAAwAAYAAAAAAAAAAAAxAPf/AAAAAAAAAAAxAPj/AAAAAAAAAAAxAPn/AAAAAAAAAAAxAPr/AAAAAAAAAAAxAPv/AAAAAAAAAAAxAPz/AAAAAAAAAAAxAP3/AAAAAAAAAAAxAP7/AAAAAAAAAAAxAP//AAAAAAAAAAAxAAAAAAAAAAAAAAAxAAEAAAAAAAAAAAAxAAIAAAAAAAAAAAAxAAMAAAAAAAAAAAAxAAQAAAAAAAAAAAAxAAUAAAAAAAAAAAAxAAYAAAAAAAAAAAAUAP7/AAAAAAAAAAAUAP//AAAAAAAAAAAVAP7/AAAAAAAAAAAVAP//AAAAAAAAAAAWAP7/AAAAAAAAAAAWAP//AAAAAAAAAAAXAP7/AAAAAAAAAAAXAP//AAAAAAAAAAAYAP7/AAAAAAAAAAAYAP//AAAAAAAAAAAZAP7/AAAAAAAAAAAZAP//AAAAAAAAAAAaAP7/AAAAAAAAAAAaAP//AAAAAAAAAAAZAPv/AAAAAAAAAAAZAPz/AAAAAAAAAAAZAP3/AAAAAAAAAAAaAPv/AAAAAAAAAAAaAPz/AAAAAAAAAAAaAP3/AAAAAAAAAADc////AAAAAAAAAADd////AAAAAAAAAADe////AAAAAAAAAADf////AAAAAAAAAADg////AAAAAAAAAADh////AAAAAAAAAADi////AAAAAAAAAADj////AAAAAAAAAADh//7/AAAAAAAAAADi//7/AAAAAAAAAADj//7/AAAAAAAAAADk//7/AAAAAAAAAADk////AAAAAAAAAADl//7/AAAAAAAAAADl////AAAAAAAAAADm//7/AAAAAAAAAADm////AAAAAAAAAADn//7/AAAAAAAAAADn////AAAAAAAAAADo//7/AAAAAAAAAADo////AAAAAAAAAADp//7/AAAAAAAAAADp////AAAAAAAAAADq//7/AAAAAAAAAADq////AAAAAAAAAADr////AAAAAAAAAADs////AAAAAAAAAADt////AAAAAAAAAADu////AAAAAAAAAADv////AAAAAAAAAAD5////AAAAAAAAAAD6////AAAAAAAAAAD7////AAAAAAAAAAD8////AAAAAAAAAAD9////AAAAAAAAAAD+////AAAAAAAAAAD/////AAAAAAAAAAAAAP//AAAAAAAAAAD///3/AAAAAAAAAAD///7/AAAAAAAAAAAAAP3/AAAAAAAAAAAAAP7/AAAAAAAAAAABAP3/AAAAAAAAAAABAP7/AAAAAAAAAAABAP//AAAAAAAAAAACAP3/AAAAAAAAAAACAP7/AAAAAAAAAAACAP//AAAAAAAAAAADAP3/AAAAAAAAAAADAP7/AAAAAAAAAAADAP//AAAAAAAAAAAEAP3/AAAAAAAAAAAEAP7/AAAAAAAAAAAEAP//AAAAAAAAAAAFAP3/AAAAAAAAAAAFAP7/AAAAAAAAAAAFAP//AAAAAAAAAAAGAP3/AAAAAAAAAAAGAP7/AAAAAAAAAAAGAP//AAAAAAAAAAAHAP3/AAAAAAAAAAAHAP7/AAAAAAAAAAAHAP//AAAAAAAAAAAIAP3/AAAAAAAAAAAIAP7/AAAAAAAAAAAIAP//AAAAAAAAAAAJAP//AAAAAAAAAAAKAP//AAAAAAAAAAALAP//AAAAAAAAAAAMAP//AAAAAAAAAAAJAP7/AAAAAAAAAAAKAP7/AAAAAAAAAADP/wIAAAAAAAAAAADQ/wIAAAAAAAAAAADR/wIAAAAAAAAAAADS/wEAAAAAAAAAAADT/wEAAAAAAAAAAADT/wIAAAAAAAAAAADS/wIAAAAAAAAAAADQ/wEAAAAAAAAAAADP/wEAAAAAAAAAAADR/wEAAAAAAAAAAAA=")
tile_set = SubResource("TileSet_5e2nw")
script = ExtResource("2_aybq8")

[node name="Player1" parent="." unique_id=292589204 instance=ExtResource("2_3sta2")]
position = Vector2(-555, -28)

[node name="CombatOverlay" parent="." unique_id=225480141 instance=ExtResource("3_31ujj")]
visible = false

[node name="CameraSystem" parent="." unique_id=1241625164 instance=ExtResource("5_upn1x")]
visible = false
position = Vector2(-272, 355)

[node name="Player2" parent="." unique_id=255533587 instance=ExtResource("6_e8gxf")]
position = Vector2(-308, -71)
collision_layer = 2
charID = 2

[node name="Node2D" type="Node2D" parent="." unique_id=822425078]

[node name="Sprite2D" type="Sprite2D" parent="." unique_id=2034486664]
show_behind_parent = true
position = Vector2(-438.99997, -924)
scale = Vector2(6.3083315, 6.308333)
texture = ExtResource("7_hd1y5")
